# planes

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  planes.sublime-project  planes.sublime-workspace
cmake/: BuildType.cmake
src/: CMakeLists.txt  main.cpp
src/engine/ecs/: component.hpp  entity.hpp
src/planes/: CMakeLists.txt
src/planes/engine/: CMakeLists.txt
src/planes/engine/ecs/: CMakeLists.txt  component.cpp  component.hpp  constants.hpp  ecs.cpp  ecs.hpp  entity.cpp  entity.hpp  errors.cpp  errors.hpp  system.cpp  system.hpp
src/planes/utils/: CMakeLists.txt  assert.hpp
tests/: CMakeLists.txt
tests/planes/: CMakeLists.txt
tests/planes/engine/: CMakeLists.txt
tests/planes/engine/ecs/: CMakeLists.txt  component.cpp  ecs.cpp  entity.cpp  system.cpp
tests/planes/utils/: CMakeLists.txt  assert.cpp
